Fix z-index of select's dropdown

--- a/blocks/select/select.styl
+++ b/blocks/select/select.styl
@@ -34,6 +34,7 @@
 .nb-select__dropdown .ui-menu
   skin: isle fly, menu no-elements
   position: absolute
+  z-index: 10000
 
   reset: ul
   list-style-type: none // move to reset
